test/sema/assign-to-immutable-member-expr.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct F {
    let i: int;

    mutating def f() {
        // CHECK: [[@LINE+1]]:16: error: cannot assign to immutable variable 'i'
        this.i = 0;
    }
}
